--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -4,7 +4,12 @@
     padding: 8px;
     position: relative;
     font-size: 13px;
-
+    // 性别select组件
+    ion-select {
+      background-color: #f5f5f9;
+      text-indent: 22px;
+      position: relative;
+    }
     // 左边的icon
     .left-icon {
       position: absolute;
