--- a/src/components/CustomSelect.scss
+++ b/src/components/CustomSelect.scss
@@ -18,6 +18,38 @@
     .custom-select-modal-bottom {
       flex: 1.7;
       background-color: #fff;
+      display: flex;
+      flex-direction: column;
+      padding: 16px;
+      padding-bottom: 0;
+      .search-input-wrap {
+        flex: none;
+        height: 40px;
+        background-color: #f5f5f9;
+        position: relative;
+        display: flex;
+        input {
+          flex: auto;
+          background-color: transparent;
+          border: none;
+          font-size: 14px;
+          line-height: 40px;
+          height: 40px;
+          text-indent: 10px;
+          color: #666;
+        }
+        ion-button {
+          flex: none;
+          margin-top: 6px;
+          margin-right: 6px;
+          &::part(native) {
+            border-radius: 4px;
+            box-shadow: none;
+            padding-top: 14px;
+            padding-bottom: 14px;
+          }
+        }
+      }
     }
   }
 }
