--- a/src/components/CustomSelect.scss
+++ b/src/components/CustomSelect.scss
@@ -22,6 +22,59 @@
       flex-direction: column;
       padding: 16px;
       padding-bottom: 0;
+      // 部门列表
+      .depList-wrap {
+        flex: auto;
+        border: 1px solid #ececec;
+        border-bottom: none;
+        margin-top: 10px;
+        display: flex;
+
+        .left-part {
+          flex: 1;
+          border-right: 1px solid #ececec;
+          // 部门单元格样式
+          .depItem-wrap {
+            color: #333;
+            padding: 14px 8px;
+
+            &.selected {
+              background-color: #fff;
+              border: 2px solid #fff;
+              top: -2px;
+              left: -2px;
+              width: calc(100% + 4px);
+            }
+          }
+          ion-content {
+            &::part(background) {
+              background: #eff5fb;
+            }
+          }
+        }
+        .right-part {
+          flex: 1.53;
+          // 岗位单元格样式
+          .unitItem-wrap {
+            background-color: #f5f5f9;
+            margin: 10px;
+            padding: 16px;
+            position: relative;
+            &.selected {
+              background-color: #fff;
+              border: 2px solid #92c7fc;
+              top: -2px;
+              left: -2px;
+            }
+          }
+          ion-content {
+            &::part(background) {
+              background: #fff;
+            }
+          }
+        }
+      }
+      // 搜索框
       .search-input-wrap {
         flex: none;
         height: 40px;
